# viso2_cg

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: odometer_base.h  odometry_params.h  stereo_processor.h
launch/: demo.launch  demo_mono.launch  demo_stereo.launch  stereo_odometer.launch  test_stereo_odometer.launch  viso2.rviz
libviso2/: CMakeLists.txt
libviso2/include/: matcher.h  viso.h  viso_mono.h
libviso2/src/: filter.cpp  viso_mono.cpp  viso_stereo.cpp
src/: mono_odometer.cpp  stereo_odometer.cpp
viso2/: CMakeLists.txt
viso2/include/: filter.h  matrix.h  viso_stereo.h
viso2/src/: matcher.cpp  viso.cpp
viso2_ros/: CMakeLists.txt
viso2_ros/launch/: demo.launch  test_stereo_odometer.launch
viso2_ros/src/: mono_odometer.cpp  stereo_odometer.cpp
